--- a/04_AppOne/web/index.html
+++ b/04_AppOne/web/index.html
@@ -25,7 +25,7 @@
         <input type="text" class="form-control" id="inSalary" name="customerSalary">
     </div>
 
-     <button type="submit" class="btn btn-primary">Submit</button>
+     <button type="button" class="btn btn-primary">Save</button>
 </form>
 
 <button id="btnCustomer" type="button" class="btn bg-danger">Get Customer</button>
