--- a/05_AppTwo/web/index.html
+++ b/05_AppTwo/web/index.html
@@ -25,10 +25,14 @@
         <input type="text" class="form-control" id="inSalary" name="customerSalary">
     </div>
 
-     <button type="submit" class="btn btn-primary">Save</button>
+     <button type="button" class="btn btn-primary" id="btnSave">Save</button>
 </form>
 
-<button id="btnCustomer" type="button" class="btn bg-danger">Get Customer</button>
+
+
+
+<button id="btnCustomer" type="button" class="btn bg-danger mt-5">Get Customer</button>
+
 <table class="table">
     <thead>
     <tr>
@@ -44,20 +48,8 @@
 </table>
 
 
-<button id="btnItem" type="button" class="btn bg-danger">Get Item</button>
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-    </tr>
-    </thead>
-    <tbody class="tblItem">
 
-    </tbodY>
-</table>
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -83,20 +75,15 @@
         });
     })
 
-    $("#btnItem").click(function () {
-        $(".tblItem").empty();
+    $("#btnSave").click(function () {
         $.ajax({
-           url: "item",
-           method: "GET",
-           dataType: "json" ,
-            success:function (resp) {
-                for(var item of resp){
-                    let row = `<tr><td>${item.id}</td><td>${item.name}</td><td>${item.qty}</td><td>${item.unitPrice}</td></tr>`;
-                    $(".tblItem").append(row);
-                }
-            }
+            url:"customer",
+            method: "POST",
+
         });
     });
+
+
 </script>
 
 </body>
